--- a/wemall/app.wxss
+++ b/wemall/app.wxss
@@ -5,6 +5,6 @@
   flex-direction: column;
   /* align-items: center; */
   justify-content: space-between;
-   padding-top: 100rpx;
+   /* padding-top: 100rpx; */
   box-sizing: border-box;
 } 
