--- a/wemall/pages/cart/index.wxml
+++ b/wemall/pages/cart/index.wxml
@@ -1,1 +1,6 @@
-<!--pages/cart/cart.wxml-->
+<!--index.wxml-->
+<import src="../template-cart/template-cart.wxml"/>
+
+<view class="container">
+     <template is="{{goodsList.list.length > 0 ? 'cart-goods-list' : 'no-goods'}}" data="{{...goodsList}}"></template>
+</view>
