--- a/wemall/pages/goods-details/index.wxml
+++ b/wemall/pages/goods-details/index.wxml
@@ -44,9 +44,9 @@
         </view>
         <view class="shop-cart-btn" bindtap="goShopCart">
             <view class="shop-num">({{shopNum}})</view>
-            <view style='position:absolute;bottom:10rpx;'> 心愿单 </view>
+            <view style='position:absolute;bottom:10rpx;'> 收藏夹 </view>
         </view>
-        <view class="join-shop-cart" bindtap="toAddShopCart">加入心愿单</view>
+        <view class="join-shop-cart" bindtap="toAddShopCart">加入收藏夹</view>
     </view>
 
     <view class="show-popup" hidden="{{hideShopPopup}}" >
@@ -75,7 +75,7 @@
                   </view>
              </view>  -->
 
-              <view class="size-label-box">
+              <view class="size-label-box" wx:if="{{goodsDetail.HasProperty}}">
                 <block wx:for="{{goodsDetail.Properties}}" wx:for-item="property" wx:for-index="idx" wx:key="Id">
                 <view class="label">{{property.Name}}</view> 
                 <view class="label-item-box">
@@ -101,7 +101,7 @@
                 </view>
              </view>  
              <view class="popup-join-btn" bindtap="addShopCart">
-                加入心愿单
+                加入收藏夹
              </view>
                               
         </view>
