--- a/wemall/pages/index/index.wxml
+++ b/wemall/pages/index/index.wxml
@@ -5,8 +5,8 @@
                     autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" bindchange="swiperchange">
             <block wx:for="{{banners}}" wx:key="id">
                 <swiper-item>
-                    <image bindtap="tapBanner" data-id="{{item.businessId}}" 
-                    src="{{item.picUrl}}" class="slide-image" width="750rpx" height="562.5rpx"/>
+                    <image bindtap="tapBanner" data-id="{{item.Id}}" 
+                    src="{{picHost+item.CoverUrl}}" class="slide-image" width="750rpx" height="562.5rpx"/>
                 </swiper-item>
             </block>
         </swiper>
