--- a/wemall/pages/my/index.wxml
+++ b/wemall/pages/my/index.wxml
@@ -5,7 +5,7 @@
 	</view>
   <view style="height:20rpx;background: #eee;width:100%;"></view>
   <view class="my-item">
-    <navigator url="/pages/order-list/index" hover-class="navigator-hover">我的订单</navigator>
+    <navigator url="/pages/order/index" hover-class="navigator-hover">我的心愿单</navigator>
   </view>
   <view class="my-item">
     <navigator url="/pages/address/index" hover-class="navigator-hover">我的收货地址</navigator>
